src/test/shell/test_data/test_case_constant_reassignment/expected_error_output.txt
Parsing error in file '../src/test/shell/test_data/test_case_constant_reassignment/input.txt' at position 5: Cannot modify constant: true
Error occurred at line 1:
true = false
     ^ here
Parsing error in file '../src/test/shell/test_data/test_case_constant_reassignment/input.txt' at position 6: Cannot modify constant: false
Error occurred at line 1:
false = true
      ^ here


